--- a/tokai.css
+++ b/tokai.css
@@ -15,12 +15,20 @@ h1 {
      padding: 20px;
      
 }
+#header-inner {
+    position: fixed;
+    width: 100%;
+    background-color: #1eb032;
+}
+#logo {
+    background-color:  rgb(18, 179, 61);
+}
 
 nav {
-    background-color: rgb(18, 179, 61); 
+    background-color:black; 
     padding: 14px 20px;
     text-align: center; 
-    position: fixed;
+   
     width: 100%;
 
 }
